--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyProject</title>
-    <link  href="./styles/room.css" >
+    <link rel="stylesheet" href="./styles/room.css" >
 </head>
-<body>
-    <div class="rooms-container">
-        <h1 class="name">НОМЕРА И ЦЕНЫ</h1>
-        <section class="rooms">
-    
-        </section>
-        <template class="room">
-            <figure class="room">
-              <img class="room__image" src="" alt="" />
-              <figcaption class="room__caption">
-                <h2 class="room__title"></h2>
-                <div class="room__text"></div>
-                <div class="room__price">
-                  <div>
-                    <div>Цена за сутки</div>
-                    <div>
-                        <div>oт</div>
-                        <div class="cost"></div>
-                        <div>₽</div>
-                    </div>
-                  </div>
-                  <div>
-                    <button class="price-button">Забронировать</button>
-                  </div>
+<body class="rooms-backgraund">
+  <div class="rooms-container">
+    <h1 class="name">Номера и цены</h1>
+    <section class="rooms">
+
+    </section>
+    <template class="room-pattern">
+        <figure class="room">
+          <img class="room__image" src="" alt="" />
+          <figcaption class="room__caption">
+            <div class="description-block">
+              <h3 class="room__title"></h3>
+              <div class="room__text"></div>
+            </div>
+            <div class="price-block">
+              <div class="price-value">
+                <h4 class="text-cost">Цена за сутки</h4>
+                <div class="cost">
+                    <h4 class="text-cost2">oт</h4>
+                    <h3 class="room__price"></h3>
+                    <h3 class="logo-currency">₽</h3>
                 </div>
-              </figcaption>
-            </figure>
-        </template>
-    </div>
-    <script type="module" src="./scripts/room.js" ></script>
+              </div>
+              <div>
+                <button class="price-button">Забронировать</button>
+              </div>
+            </div>
+          </figcaption>
+        </figure>
+    </template>
+  </div>
+  <script type="module" src="./scripts/room.js" ></script>
 </body>
 </html>
