--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <figure class="room">
           <img class="room__image" src="" alt="" />
           <figcaption class="room__caption">
+            <div class="bestPrice">
+              <div class="bestPrice-textBox">
+                <div class="bestPrice-text">Гарантия лучшей цены!</div>
+              </div>
+              <img class="discount-image" src="./images/DiscountLogo/icon-discount.png" alt="" />
+            </div>
+            
             <div class="description-block">
               <h3 class="room__title"></h3>
               <div class="room__text"></div>
@@ -31,6 +38,13 @@
               </div>
               <div>
                 <button class="price-button">Забронировать</button>
+              </div>
+            </div>
+            <div class="reserved">
+              <div>Номер зарезервирован</div>
+              <div>
+                <div>Перейти к</div>
+                <div>оплате</div>
               </div>
             </div>
           </figcaption>
