js(final) non-verstka

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 </div>
               </div>
               <div>
-                <button class="price-button">Забронировать</button>
+                <button class="price price-button">Забронировать</button>
               </div>
             </div>
             <div class="reserved">
-              <div>Номер зарезервирован</div>
-              <div>
-                <div>Перейти к</div>
-                <div>оплате</div>
+              <div class="reserved__text">Номер зарезервирован</div>
+              <div class="reserved__bottom-textBox">
+                <div class="reserved__text">Перейти к</div>
+                <div class="reserved__text2">оплате</div>
               </div>
             </div>
           </figcaption>
