Fix ClassName HTML+CSS(version1.0)

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>MyProject</title>
     <link rel="stylesheet" href="./styles/room.css" >
 </head>
-<body class="rooms-backgraund">
+<body>
   <div class="rooms-container">
-    <h1 class="name">Номера и цены</h1>
-    <section class="rooms">
+    <h1 class="rooms-title">Номера и цены</h1>
+    <section class="rooms-content">
 
     </section>
     <template class="room-pattern">
@@ -27,6 +27,7 @@
               <h3 class="room__title"></h3>
               <div class="room__text"></div>
             </div>
+            <hr class="divid-line">
             <div class="price-block">
               <div class="price-value">
                 <h4 class="text-cost">Цена за сутки</h4>
