--- a/index.html
+++ b/index.html
@@ -18,35 +18,43 @@
       <figure class="room">
         <img class="room__image" src="" alt="" />
         <div class="room__content">
-          <div class="discount">
-            <div class="discount__textBox">
-              <div class="discount__text">Гарантия лучшей цены!</div>
+          <div class="room__nonReserved">
+            <div class="discount">
+              <div class="discount__textBox">
+                <div class="discount__text">Гарантия лучшей цены!</div>
+              </div>
+              <img class="discount__image" src="./images/DiscountLogo/icon-discount.png" alt="" />
             </div>
-            <img class="discount__image" src="./images/DiscountLogo/icon-discount.png" alt="" />
-          </div>
-          <figcaption class="room__caption">
-            <h3 class="room__title"></h3>
-            <div class="room__text"></div>
-          </figcaption>
-          <hr class="divid-line">
-          <div class="price-block">
-            <div class="price-value">
-              <h4 class="text-price">Цена за сутки</h4>
-              <div class="cost">
-                <h4 class="text-price2">oт</h4>
-                <h3 class="room__price"></h3>
-                <h3 class="logo-currency">₽</h3>
+            <figcaption class="room__caption">
+              <h3 class="room__title"></h3>
+              <div class="room__text"></div>
+            </figcaption>
+            <hr class="divid-line">
+            <div class="price-block">
+              <div class="price-value">
+                <h4 class="text-price">Цена за сутки</h4>
+                <div class="cost">
+                  <h4 class="text-price2">oт</h4>
+                  <h3 class="room__price"></h3>
+                  <h3 class="logo-currency">₽</h3>
+                </div>
+              </div>
+              <div>
+                <button class="reservation defoult-button">Забронировать</button>
               </div>
             </div>
-            <div>
-              <button class="reservation defoult-button">Забронировать</button>
-            </div>
           </div>
-          <div class="reserved">
-            <div class="reserved__text">Номер зарезервирован</div>
-            <div class="reserved__bottom-textBox">
-              <div class="reserved__text">Перейти к</div>
-              <div class="reserved__text2">оплате</div>
+          <div class="room__Reserved">
+            <figcaption class="room__caption">
+              <h3 class="room__title"></h3>
+              <div class="room__text"></div>
+            </figcaption>
+            <div class="reserved">
+              <div class="reserved__text">Номер зарезервирован</div>
+              <div class="reserved__bottom-textBox">
+                <div class="reserved__text">Перейти к</div>
+                <div class="reserved__text2">оплате</div>
+              </div>
             </div>
           </div>
         </div>
