--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     </section>
     <template class="room-pattern">
       <figure class="room">
-        <img class="room__image" src="" alt="" />
+        <img class="room__image" src="" alt="">
         <div class="room__content">
           <div class="room__nonReserved">
             <div class="discount">
               <div class="discount__textBox">
                 <div class="discount__text">Гарантия лучшей цены!</div>
               </div>
-              <img class="discount__image" src="./images/DiscountLogo/icon-discount.png" alt="" />
+              <img class="discount__image" src="./images/DiscountLogo/icon-discount.png" alt="">
             </div>
             <figcaption class="room__caption">
-              <h3 class="room__title"></h3>
+              <div class="room__title"></div>
               <div class="room__text"></div>
             </figcaption>
             <hr class="divid-line">
             <div class="price-block">
               <div class="price-value">
-                <h4 class="text-price">Цена за сутки</h4>
+                <div class="text-price">Цена за сутки</div>
                 <div class="cost">
-                  <h4 class="text-price2">oт</h4>
-                  <h3 class="room__price"></h3>
-                  <h3 class="logo-currency">₽</h3>
+                  <div class="text-price2">oт</div>
+                  <div class="room__price"></div>
+                  <div class="logo-currency">₽</div>
                 </div>
               </div>
               <div>
@@ -46,7 +46,7 @@
           </div>
           <div class="room__Reserved">
             <figcaption class="room__caption">
-              <h3 class="room__title"></h3>
+              <div class="room__title"></div>
               <div class="room__text"></div>
             </figcaption>
             <div class="reserved">
